# PromptSpec

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.codex  harness.py  package.json  pnpm-lock.yaml  pyproject.toml  quality_gate.py  ralph_check.py
apps/desktop/: package.json
apps/web/: package.json  playwright.config.ts
docs/: API_Specification.md  Acceptance_Test_Prompt.md  Agent_Instructions.md  Agent_Specification.md  Data_Model.md  Harness_Specification.md  Implementation_Guide.md  Implementation_Roadmap.md  Naming_Convention.md  Quality_Test_Guideline.md  README.md  Ralph_Loop_Prompt.md  Ralph_Loop_Specification.md  Repository_Structure.md  SDD.md  SRS.md  TDD_Strategy.md  UI_Design.md
docs/implementation/: CI_Workflow.md  Desktop.md  Docker.md  M10_Temp_Checkpoint.md  M6_Temp_Checkpoint.md  M7_Temp_Checkpoint.md  M9_Temp_Checkpoint.md  Readiness.md  Release_Checklist.md  Traceability_Matrix.md
docs/milestones/: README.md
fixtures/scenario/: pass_case.json
ralph/: acceptance_gate.md  generator_rules.md  iteration_log.md  loop_prompt.md  progress.txt  task_list.json
scripts/: smoke_local_llm.py
tests/integration/: test_api.py
tests/scenario/: test_engine_scenario.py
tests/unit/: test_agents_inspection.py  test_engine_conditions.py  test_engine_registry.py  test_engine_renderer_validator.py  test_engine_resolver.py  test_engine_serialization.py  test_harness_comparator.py  test_harness_loader.py  test_harness_runner.py  test_meaning_report.py  test_prompt_slot.py  test_prompt_spec.py  test_quality_gate.py  test_ralph_helpers.py  (+6 more)
(+13 files in other folders)
