[project]
name = "promptspec"
version = "0.1.0"
description = "Slot-based prompt architecture standalone app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "sqlmodel>=0.0.22",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/model/src",
  "packages/engine/src",
  "packages/agents/src",
  "packages/harness/src",
  "services/api/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = [
  "packages/model/src",
  "packages/engine/src",
  "packages/agents/src",
  "packages/harness/src",
  "services/api/src",
]
